# advent-of-code

./: .gitignore  Makefile  README.md  get_input.sh
c++/: .clang-format  CMakeLists.txt  aoc.cpp  bench.cpp
c++/in/: tmp
c++/include/: aoc.h  utils.h
c++/src/: utils.cpp
c++/src/2018/: 01.cpp  02.cpp  03.cpp  04.cpp
c++/src/2020/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
c++/src/2021/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
c++/src/2022/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
c++/src/2023/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
haskell/: .gitignore  .stylish-haskell.yaml  aoc-haskell.cabal  criterion.html  package.yaml  stack.yaml
haskell/app/: Bench.hs  Main.hs
haskell/src/: Command.hs  Lib.hs
haskell/src/AOC2018/: Day01.hs  Day02.hs  Day03.hs  Day04.hs
haskell/src/AOC2020/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
haskell/src/AOC2021/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
haskell/src/AOC2022/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
haskell/src/AOC2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs
src/: day-01.1-Chronal_Calibration.cpp  day-01.2-Chronal_Calibration.cpp  day-02.1-Inventory_Management_System.cpp  day-02.2-Inventory_Management_System.cpp
