cabal-version:  3.0
name:           aoc-haskell
version:        0.1.0.0
homepage:       https://github.com/rnallandigal/advent-of-code#readme
bug-reports:    https://github.com/rnallandigal/advent-of-code/issues
author:         Rohith Nallandigal
maintainer:     rnallandigal@gmail.com
copyright:      Copyright (c) 2020 Rohith Nallandigal
license:        MIT
build-type:     Simple

common common-opts
  default-language: Haskell2010
  ghc-options: -O2 -threaded -Wno-x-partial -Wno-missing-home-modules
  build-depends:
      base >=4.7 && <5
    , arithmoi
    , containers
    , criterion
    , deepseq
    , distributive
    , ghc-prim
    , hashable
    , hedgehog
    , linear
    , monad-loops
    , mtl
    , optparse-applicative
    , parsec
    , pqueue
    , pretty-simple
    , primitive
    , regex-tdfa
    , semigroupoids
    , split
    , text
    , transformers
    , unordered-containers >=0.2.13.0
    , vector
    , vector-split

executable aoc
  import: common-opts
  hs-source-dirs: app, src
  main-is: Main.hs
  ghc-options: -rtsopts -with-rtsopts=-N

executable bench
  import: common-opts
  hs-source-dirs: app, src
  main-is: Bench.hs
  ghc-options: -rtsopts -with-rtsopts=-N
